target changed to Java 11 to be compatible with Android